# webapp-synth

./: .gitignore  README.md  pyproject.toml  webapp_synth_solver_opencode.py
docs/: webapp-synth-sp1-frontend-substrate-plan.md  webapp-synth-sp1-frontend-substrate.md  webapp-synth-sp2-industry-taxonomy-design.md  webapp-synth-sp2-industry-taxonomy-plan.md
tasks_web/dental_clinic_form_validation_t0/: instruction.md  reference.patch  task.toml
tasks_web/dental_clinic_form_validation_t0/checks/: anticheat.py
tasks_web/dental_clinic_form_validation_t0/checks/web/: anticheat.test.tsx  correctness.test.tsx
tasks_web/dental_clinic_form_validation_t0/repo/src/: App.tsx
tasks_web/fitness_responsive_grid_t0/: instruction.md  reference.patch  task.toml
tasks_web/fitness_responsive_grid_t0/checks/: anticheat.py
tasks_web/fitness_responsive_grid_t0/repo/: index.html
tasks_web/fitness_responsive_grid_t0/repo/src/: App.tsx
tasks_web/restaurant_accordion_single_t0/: instruction.md  reference.patch  task.toml
tasks_web/restaurant_accordion_single_t0/checks/: _vitest.py  anticheat.py  correctness.py
tasks_web/restaurant_accordion_single_t0/repo/: package.json
tasks_web/taskflow_repair_t0/: instruction.md  reference.patch  task.toml
tasks_web/taskflow_repair_t0/checks/: anticheat.py
tasks_web/taskflow_repair_t0/repo/: package-lock.json
tests/: test_frontend_module.py  test_frontend_vitest_parse.py  test_taxonomy.py
webapp_synth/: __init__.py  env.py  harness.py  rubric.py  taskset.py
webapp_synth/taxonomy/: __init__.py  seeds.py  webapp_library.md
(+16 files in other folders)
