[project]
name = "webapp-synth"
version = "0.0.1"
description = "Synthetic-data generation for React/Tailwind landing-page coding tasks; reuses evolving-coding-agent's scoring engine."
requires-python = ">=3.10"
dependencies = [
    "evolving-coding-agent",
    "verifiers>=0.1.15.dev2",
    "tyro>=0.9",
]

[tool.uv.sources]
evolving-coding-agent = { path = "../evolve-cc", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webapp_synth"]

[project.entry-points."verifiers.envs"]
webapp-synth-solver-opencode = "webapp_synth.env:load_environment"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
